Finishing test +Java Doc